--- a/app/src/main/res/drawable/ic_person_outline.xml
+++ b/app/src/main/res/drawable/ic_person_outline.xml
@@ -14,5 +14,5 @@
       android:strokeWidth="1"
       android:pathData="M12,14.25C7.9219,14.25 3.7828,16.5 3.0169,20.7469C2.9245,21.2588 3.2142,21.75 3.75,21.75H20.25C20.7862,21.75 21.0759,21.2588 20.9836,20.7469C20.2172,16.5 16.0781,14.25 12,14.25Z"
       android:fillColor="#00000000"
-      android:strokeColor="#8A8A8A"/>
+      android:strokeColor="#606060"/>
 </vector>
