--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -50,34 +50,46 @@
                     android:layout_height="match_parent">
 
 
-                    <ImageView
-                        android:src="@drawable/logo"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:src="@drawable/mbslogo"
                         android:padding="5dp"
                         android:layout_marginTop="60dp"
                         android:layout_gravity="center"
                         android:layout_width="124dp"
                         android:layout_height="124dp"/>
 
-                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                        app:textViewFont="overpass_bold.ttf"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="#000000"
-                        android:textSize="24dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name_title"/>
 
-                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                        app:textViewFont="overpass_regular.ttf"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="#99000000"
-                        android:layout_width="wrap_content"
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/editKeyBranch"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/editKeyBranchLinkApi"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/app_name_desc"/>
+                        android:layout_margin="@dimen/activity_vertical_margin"
+                        android:hint="Nama Branch"
+                        app:startIconDrawable="@drawable/ic_business_outline">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/editBranch"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
@@ -106,6 +118,8 @@
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/editPassword"
+                            android:inputType="textPassword"
+                            android:maxLength="8"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -125,6 +139,23 @@
                         android:layout_margin="@dimen/activity_vertical_margin"
                         android:text="LOGIN" />
 
+
+
+
+                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                        app:textViewFont="overpass_thin.ttf"
+                        android:textSize="12dp"
+                        android:padding="0.0dip"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textColor="#99000000"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:text="*Perhatian: \nNama Akun(isi nomor rekening)\nSandi Akun Bank(Isi Pin I-Banking)"/>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -132,7 +163,7 @@
                     android:layout_centerHorizontal="true"
                     android:orientation="horizontal"
                     android:layout_gravity="center"
-                    android:layout_marginTop="120dp"
+                    android:layout_marginTop="60dp"
                     android:layout_marginBottom="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
@@ -151,7 +182,7 @@
                         android:paddingRight="4dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Buat punya Akun ? "/>
+                        android:text="Belum punya Akun ? "/>
 
 
                     <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
@@ -177,4 +208,21 @@
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:background="#4D000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-7dp"
+            android:indeterminate="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
