--- a/app/src/main/res/layout/page_akun.xml
+++ b/app/src/main/res/layout/page_akun.xml
@@ -1,6 +1,363 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FFFFFF"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        app:elevation="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:paddingRight="10dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_collapseMode="pin">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:fontFamily="@font/overpass_thin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Akun"/>
+
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:scrollbars="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/linierLayout2"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:background="#F6F6F6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                        app:textViewFont="overpass_regular.ttf"
+                        android:padding="0.0dip"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:textColor="#99000000"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:text="Informasi Data Bank"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv1"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_card"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv1"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv1"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Nomor Rekening Bank"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv1"
+                                android:layout_below="@+id/tv1"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv2"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_business_outline"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv2"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv2"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Jenis Rekening"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv2"
+                                android:layout_below="@+id/tv2"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv3"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_person_outline"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv3"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv3"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Nama Nasabah"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv3"
+                                android:layout_below="@+id/tv3"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv4"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_calendar_outline"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv4"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv4"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Tanggal Lahir"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv4"
+                                android:layout_below="@+id/tv4"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv5"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_location_outline"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv5"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv5"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Tempat Lahir"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv5"
+                                android:layout_below="@+id/tv5"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:paddingTop="16dp"
+                            android:paddingLeft="16dp"
+                            android:paddingRight="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/iv6"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_home"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/tv6"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="N.A"
+                                android:layout_toRightOf="@+id/iv6"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:text="Alamat"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_toRightOf="@+id/iv6"
+                                android:layout_below="@+id/tv6"
+                                style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-7dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
