--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,88 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activity_start"
-    tools:context=".Splash">
+    android:background="#FFFFFF"
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/loginLayout"
+
+    <androidx.appcompat.widget.AppCompatImageView
+        app:srcCompat="@drawable/ic_ornamen3"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="-10dp"
+        android:layout_marginLeft="-10dp"
+        android:layout_width="104dp"
+        android:layout_height="124dp"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        app:srcCompat="@drawable/ic_ornamen5"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="-10dp"
+        android:layout_marginRight="-180dp"
+        android:layout_width="280dp"
+        android:layout_height="280dp"/>
+
+
+    <androidx.appcompat.widget.AppCompatImageView
+        app:srcCompat="@drawable/ic_ornamen5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-60dp"
+        android:layout_marginLeft="-170dp"
+        android:layout_width="280dp"
+        android:layout_height="280dp"/>
+
+    <LinearLayout
+        android:padding="@dimen/activity_vertical_margin"
+        android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <androidx.appcompat.widget.AppCompatImageView
+            app:srcCompat="@drawable/ic_logominibanksantri"
+            android:padding="5dp"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"
+            android:layout_width="124dp"
+            android:layout_height="124dp"/>
 
-            <androidx.appcompat.widget.AppCompatImageView
-                app:srcCompat="@drawable/ic_ornamen3"
-                android:layout_alignParentLeft="true"
-                android:layout_marginTop="-10dp"
-                android:layout_marginLeft="-10dp"
-                android:layout_width="104dp"
-                android:layout_height="124dp"/>
+        <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+            android:visibility="gone"
+            app:textViewFont="overpass_bold.ttf"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:textSize="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name_title"/>
+        <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+            android:visibility="gone"
+            app:textViewFont="overpass_regular.ttf"
+            android:fontFamily="sans-serif-light"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="#99000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name_desc"/>
 
-            <androidx.appcompat.widget.AppCompatImageView
-                app:srcCompat="@drawable/ic_ornamen5"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="-10dp"
-                android:layout_marginRight="-150dp"
-                android:layout_width="280dp"
-                android:layout_height="280dp"/>
+    </LinearLayout>
 
-
-            <androidx.appcompat.widget.AppCompatImageView
-                app:srcCompat="@drawable/ic_ornamen5"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="-60dp"
-                android:layout_marginLeft="-170dp"
-                android:layout_width="280dp"
-                android:layout_height="280dp"/>
-
-            <LinearLayout
-                android:padding="@dimen/activity_vertical_margin"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:src="@drawable/mbslogo"
-                    android:padding="5dp"
-                    android:layout_marginTop="60dp"
-                    android:layout_gravity="center"
-                    android:layout_width="124dp"
-                    android:layout_height="124dp"/>
-
-                <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                    app:textViewFont="overpass_bold.ttf"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textColor="#000000"
-                    android:textSize="24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name_title"/>
-                <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                    app:textViewFont="overpass_regular.ttf"
-                    android:fontFamily="sans-serif-light"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textColor="#99000000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name_desc"/>
-
-            </LinearLayout>
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
