--- a/app/src/main/res/layout/activity_transfer_lanjut.xml
+++ b/app/src/main/res/layout/activity_transfer_lanjut.xml
@@ -101,14 +101,6 @@
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-7dp"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <include layout="@layout/loading"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
