--- a/app/src/main/res/drawable/ic_chevron_down.xml
+++ b/app/src/main/res/drawable/ic_chevron_down.xml
@@ -1,13 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M20,23.9999L12,15.9999L20,7.9999"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#8A8A8A"
-      android:strokeLineCap="round"/>
+      android:pathData="M19.6051,12C19.6051,12.44 19.2451,12.8 18.8051,12.8H7.1251L10.7451,16.44C11.0651,16.76 11.0651,17.26 10.7451,17.58C10.5851,17.74 10.3851,17.82 10.1851,17.82C9.9851,17.82 9.7651,17.74 9.6251,17.58L4.6451,12.58C4.3251,12.26 4.3251,11.76 4.6451,11.46L9.6251,6.46C9.9451,6.14 10.4451,6.14 10.7651,6.46C11.0851,6.78 11.0851,7.28 10.7651,7.6L7.1251,11.2H18.8051C19.2451,11.2 19.6051,11.56 19.6051,12Z"
+      android:fillColor="#ffffff"/>
 </vector>
