--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,81 +3,174 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#ffffff"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
 
-    <androidx.core.widget.NestedScrollView
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <RelativeLayout
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            app:srcCompat="@drawable/ic_ornamen3"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="-10dp"
+            android:layout_marginLeft="-10dp"
+            android:layout_width="108dp"
+            android:layout_height="170dp"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            app:srcCompat="@drawable/ic_ornamen5"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="-30dp"
+            android:layout_marginRight="-120dp"
+            android:layout_width="280dp"
+            android:layout_height="280dp"/>
 
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                app:srcCompat="@drawable/ic_ornamen3"
-                android:layout_alignParentLeft="true"
-                android:layout_marginTop="-10dp"
-                android:layout_marginLeft="-10dp"
-                android:layout_width="108dp"
-                android:layout_height="170dp"/>
-
-            <androidx.appcompat.widget.AppCompatImageView
-                app:srcCompat="@drawable/ic_ornamen5"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="-30dp"
-                android:layout_marginRight="-120dp"
-                android:layout_width="280dp"
-                android:layout_height="280dp"/>
-
-
             <LinearLayout
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/editKeyBranch"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/editKeyBranchLinkApi"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/editKeyBranchLinkApiLogo"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+
+
+
+                <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                    android:visibility="gone"
+                    app:textViewFont="overpass_thin.ttf"
+                    android:textSize="12dp"
+                    android:padding="0.0dip"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="#99000000"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:text="*Perhatian: \nNama Akun(isi nomor rekening)\nSandi Akun Bank(Isi Pin I-Banking)"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+                <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                    app:textViewFont="overpass_regular.ttf"
+                    android:fontFamily="sans-serif-light"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#1B1D28"
+                    android:paddingTop="@dimen/list_vertical_margin"
+                    android:paddingBottom="@dimen/list_vertical_margin"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Belum punya Akun ? "/>
+
+
+                <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                    android:id="@+id/actSignUp"
+                    app:textViewFont="overpass_regular.ttf"
+                    android:fontFamily="sans-serif-light"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#1F4FCA"
+                    android:paddingTop="@dimen/list_vertical_margin"
+                    android:paddingBottom="@dimen/list_vertical_margin"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Daftar Sekarang"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                app:srcCompat="@drawable/ic_logominibanksantri"
+                android:padding="5dp"
+                android:layout_marginTop="60dp"
+                android:layout_gravity="center"
+                android:layout_width="124dp"
+                android:layout_height="124dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_margin="@dimen/list_vertical_margin"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                app:cardElevation="3dp"
+                app:cardCornerRadius="5dp"
+                android:backgroundTint="#FFFFFF">
+
                 <LinearLayout
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:src="@drawable/mbslogo"
-                        android:padding="5dp"
-                        android:layout_marginTop="60dp"
-                        android:layout_gravity="center"
-                        android:layout_width="124dp"
-                        android:layout_height="124dp"/>
-
-
-
-                    <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/editKeyBranch"
-                        android:visibility="gone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                    <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/editKeyBranchLinkApi"
-                        android:visibility="gone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
 
 
                     <com.google.android.material.textfield.TextInputLayout
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
+                        app:boxBackgroundColor="@android:color/transparent"
+                        android:background="@android:color/transparent"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/activity_vertical_margin"
                         android:hint="Nama Branch"
                         app:startIconDrawable="@drawable/ic_business_outline">
 
@@ -90,12 +183,16 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <View style="@style/divider" />
 
                     <com.google.android.material.textfield.TextInputLayout
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
+                        app:boxBackgroundColor="@android:color/transparent"
+                        android:background="@android:color/transparent"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/activity_vertical_margin"
                         app:startIconDrawable="@drawable/ic_person_outline"
                         app:endIconMode="clear_text"
                         android:hint="Nama Akun">
@@ -104,14 +201,20 @@
                             android:id="@+id/editAkun"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:inputType="none"
                             android:maxLines="1" />
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <View style="@style/divider" />
+
                     <com.google.android.material.textfield.TextInputLayout
+                        app:boxStrokeWidth="0dp"
+                        app:boxStrokeWidthFocused="0dp"
+                        app:boxBackgroundColor="@android:color/transparent"
+                        android:background="@android:color/transparent"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/activity_vertical_margin"
                         app:startIconDrawable="@drawable/ic_lock_open_outline"
                         app:endIconMode="password_toggle"
                         android:hint="Sandi Akun Bank">
@@ -123,106 +226,48 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.button.MaterialButton
-                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                        android:backgroundTint="@color/colorHijauTerang"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/actSignIn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="60dp"
-                        android:textAllCaps="true"
-                        app:strokeWidth="0dp"
-                        app:elevation="0dp"
-                        android:elevation="0dp"
-                        android:layout_margin="@dimen/activity_vertical_margin"
-                        android:text="LOGIN" />
-
-
-
-
-                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                        app:textViewFont="overpass_thin.ttf"
-                        android:textSize="12dp"
-                        android:padding="0.0dip"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:textColor="#99000000"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:text="*Perhatian: \nNama Akun(isi nomor rekening)\nSandi Akun Bank(Isi Pin I-Banking)"/>
-
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="60dp"
-                    android:layout_marginBottom="30dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
 
 
-                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                        app:textViewFont="overpass_regular.ttf"
-                        android:fontFamily="sans-serif-light"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="#1B1D28"
-                        android:paddingTop="@dimen/list_vertical_margin"
-                        android:paddingBottom="@dimen/list_vertical_margin"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Belum punya Akun ? "/>
+            </androidx.cardview.widget.CardView>
 
+            <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
+                android:id="@+id/actLostPassword"
+                android:textSize="14dp"
+                app:textViewFont="overpass_regular.ttf"
+                android:fontFamily="sans-serif-light"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_gravity="right"
+                android:gravity="center"
+                android:paddingTop="4dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="0dp"
+                android:paddingBottom="4dp"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lupa Password?"/>
 
-                    <id.kopas.berkarya.said.ibanking.fun.TextViewCustom
-                        android:id="@+id/actSignUp"
-                        app:textViewFont="overpass_regular.ttf"
-                        android:fontFamily="sans-serif-light"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="#1F4FCA"
-                        android:paddingTop="@dimen/list_vertical_margin"
-                        android:paddingBottom="@dimen/list_vertical_margin"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Daftar Sekarang"/>
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:backgroundTint="@color/colorHijauTerang"
+                android:textColor="@color/colorWhite"
+                android:id="@+id/actSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="60dp"
+                android:textAllCaps="true"
+                app:strokeWidth="0dp"
+                app:elevation="3dp"
+                android:elevation="3dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:text="LOGIN" />
 
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
-
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/progressBar"
-        android:background="#4D000000"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-7dp"
-            android:indeterminate="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        </LinearLayout>
     </RelativeLayout>
+    <include layout="@layout/loading"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
