--- a/app/src/main/res/layout/item_history_transaksi.xml
+++ b/app/src/main/res/layout/item_history_transaksi.xml
@@ -72,15 +72,18 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                <TextView
-                    android:text="ket_transaksi"
-                    android:textSize="16dp"
-                    android:textColor="@color/colorTextThird"
-                    android:fontFamily="sans-serif-light"
-                    android:id="@+id/tv1"
-                    android:layout_centerVertical="true"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content" />
+                    <TextView
+                        android:text="ket_transaksi"
+                        android:textSize="16dp"
+                        android:textColor="@color/colorTextThird"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/tv1"
+                        android:layout_toLeftOf="@+id/tv4"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content" />
 
                     <TextView
                         android:text="debet/kredit"
