--- a/app/src/main/res/layout/page_akun.xml
+++ b/app/src/main/res/layout/page_akun.xml
@@ -111,7 +111,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv1"
                                 style="@style/text_title" />
                             <TextView
@@ -154,7 +154,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv2"
                                 style="@style/text_title" />
                             <TextView
@@ -197,7 +197,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv3"
                                 style="@style/text_title" />
                             <TextView
@@ -240,7 +240,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv4"
                                 style="@style/text_title" />
                             <TextView
@@ -284,7 +284,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv5"
                                 style="@style/text_title" />
                             <TextView
@@ -326,7 +326,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_marginTop="0.0dip"
                                 android:layout_marginBottom="0.0dip"
-                                android:text="N.A"
+                                android:text="-"
                                 android:layout_toRightOf="@+id/iv6"
                                 style="@style/text_title" />
                             <TextView
@@ -344,20 +344,128 @@
 
 
 
+                    <androidx.cardview.widget.CardView
+                        android:background="?selectableItemBackground"
+                        app:cardElevation="0dp"
+                        android:id="@+id/btn_send_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="@android:color/white"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:padding="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView android:id="@+id/img_feed_back"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_feedback_24dp"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="Berikan Masukan"
+                                android:layout_toRightOf="@+id/img_feed_back"
+                                android:layout_centerVertical="true"
+                                style="@style/text_title" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:background="?selectableItemBackground"
+                        android:id="@+id/card_share"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardElevation="0dp"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:padding="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:id="@+id/img_share"
+                                android:padding="8.0dip"
+                                android:layout_width="40.0dip"
+                                android:layout_height="40.0dip"
+                                android:layout_marginRight="16dp"
+                                app:srcCompat="@drawable/ic_share_24dp"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentTop="true" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="Bagikan Aplikasi ini"
+                                android:layout_toRightOf="@+id/img_share"
+                                android:layout_centerVertical="true"
+                                style="@style/text_title" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:background="?selectableItemBackground"
+                        app:cardElevation="0dp"
+                        android:id="@+id/btn_faq"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:padding="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:id="@+id/appn2"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="FAQ"
+                                style="@style/text_title" />
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:textSize="12.0sp"
+                                android:id="@+id/tv_version2"
+                                android:text="Lihat pertanyaan yang sering diajukan"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_below="@+id/appn2" style="@style/text_content" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:background="?selectableItemBackground"
+                        app:cardElevation="0dp"
+                        android:id="@+id/btn_kebijakan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardUseCompatPadding="true">
+                        <RelativeLayout
+                            android:padding="16dp"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:fontFamily="sans-serif-light"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="0.0dip"
+                                android:layout_marginBottom="0.0dip"
+                                android:text="Kebijakan"
+                                android:layout_centerVertical="true"
+                                style="@style/text_title" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-7dp"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <include layout="@layout/loading"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
