--- a/app/src/main/res/layout/page_dashboard.xml
+++ b/app/src/main/res/layout/page_dashboard.xml
@@ -52,13 +52,11 @@
                         android:layout_height="wrap_content">
 
 
-                        <de.hdodenhof.circleimageview.CircleImageView
+                        <ImageView
                             android:id="@+id/imageLogo"
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                            android:src="@drawable/logo"
-                            app:civ_border_width="0dp"
-                            app:civ_border_color="#FF000000"/>
+                            android:src="@drawable/logo"/>
 
                         <LinearLayout
                             android:layout_alignParentRight="true"
@@ -97,7 +95,7 @@
                                 android:id="@+id/imageProfile"
                                 android:layout_width="42dp"
                                 android:layout_height="42dp"
-                                android:src="@drawable/img1"
+                                android:src="@drawable/family_avatar"
                                 app:civ_border_width="0dp"
                                 app:civ_border_color="#FF000000"/>
                         </LinearLayout>
@@ -265,7 +263,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
-                    android:layout_margin="@dimen/list_vertical_margin"
+                    android:layout_marginBottom="@dimen/list_vertical_margin"
                     android:layout_gravity="center"
                     android:layout_width="300dp"
                     android:orientation="vertical"
@@ -293,10 +291,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_f1"
+                                    app:srcCompat="@drawable/ic_wifi"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -311,7 +309,7 @@
                                     android:textColor="#606060"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Kirim Uang"/>
+                                    android:text="Internet\nSpeedy"/>
 
                             </LinearLayout>
 
@@ -322,10 +320,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_f2"
+                                    app:srcCompat="@drawable/ic_flash_sharp"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -340,7 +338,7 @@
                                     android:textColor="#606060"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Permintaan\nUang"/>
+                                    android:text="Listrik\nPrabayar"/>
 
                             </LinearLayout>
 
@@ -351,10 +349,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_f3"
+                                    app:srcCompat="@drawable/ic_phone_portrait_color"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -369,7 +367,7 @@
                                     android:textColor="#606060"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Pembelian"/>
+                                    android:text="Kartu Hallo"/>
 
                             </LinearLayout>
                         </LinearLayout>
@@ -395,10 +393,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_card2"
+                                    app:srcCompat="@drawable/ic_cardcolor"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -418,16 +416,16 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:id="@+id/pagePembayaran1"
+                                android:id="@+id/pageMutasi"
                                 android:background="?selectableItemBackground"
                                 android:orientation="vertical"
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_pembayaran"
+                                    app:srcCompat="@drawable/ic_mutasi_color"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -442,7 +440,7 @@
                                     android:textColor="#606060"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Pembayaran"/>
+                                    android:text="Mutasi\nRekening Bank"/>
 
                             </LinearLayout>
 
@@ -453,10 +451,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_time_outline"
+                                    app:srcCompat="@drawable/ic_log_in_outline"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -497,10 +495,10 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
-                                    app:srcCompat="@drawable/ic_setoran"
+                                    app:srcCompat="@drawable/ic_time_outline"
                                     android:layout_gravity="center"
                                     android:layout_width="32dp"
                                     android:layout_height="32dp"/>
@@ -526,7 +524,7 @@
                                 android:layout_width="100dp"
                                 android:paddingTop="@dimen/list_vertical_margin"
                                 android:paddingBottom="@dimen/list_vertical_margin"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <androidx.appcompat.widget.AppCompatImageView
                                     app:srcCompat="@drawable/ic_info"
@@ -568,22 +566,6 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/progressBar"
-        android:background="#4D000000"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-7dp"
-            android:indeterminate="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    </RelativeLayout>
+    <include layout="@layout/loading"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
