--- a/app/src/main/res/layout/page_ewallet.xml
+++ b/app/src/main/res/layout/page_ewallet.xml
@@ -97,7 +97,7 @@
                     <ImageView
                         android:id="@+id/qrcode"
                         android:scaleType="fitCenter"
-                        android:layout_width="300dp"
+                        android:layout_width="match_parent"
                         android:layout_height="300dp"/>
 
                 </androidx.cardview.widget.CardView>
